kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-kubernetes-demo
spec:
  selector:
    matchLabels:
      run: laravel-kubernetes-demo
  template:
    metadata:
      labels:
        run: laravel-kubernetes-demo
    spec:
      containers:
        - name: demo-laravel
          image: core.harbor.lapan.go.id/library/laravel-kubernetes-demo:v1.0
          ports:
            - containerPort: 80
      imagePullSecrets:
       - name: regcred
