kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-kubernetes-demo
spec:
  type: ClusterIP
  selector:
    run: laravel-kubernetes-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
